--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project</title>
+    <title>TACOCAT: A Coding Challenge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,34 +18,38 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
   
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ==== Nav Section ==== -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/BralinLarence-Brand-Header-Logo-1.svg" class="d-inline-block align-text-top" height="24" width="100">APP NAME</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            <a class="navbar-brand nav-content-color nav-content-font " href="#">TACOCAT</a>
+            <button class="navbar-toggler btn-gold-outline" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="custom-toggler-icon"><i class="fa fa-bars"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active nav-content-color nav-content-font" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="app.html">App</a>
+                        <a class="nav-link nav-content-font nav-content-color" href="app.html">App</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="code.html">Code</a>
+                        <a class="nav-link nav-content-font nav-content-color" href="code.html">Code</a>
                     </li>                    
-                    <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <li class="nav-item ">
+                        <a class="nav-link nav-content-font nav-content-color" target="_blank" href="#">Git Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">About</a>
+                        <a class="nav-link nav-content-font nav-content-color" target="_blank" href="#">About</a>
                     </li>
                 </ul>
             </div>
@@ -56,12 +60,11 @@
        <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 rol-cols-1 row-cols-lg-2">
                 <div class="col-12 col-lg-6 order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP Name: A Coding Project </h1>
-                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a
-                        program that displays the numbers from 0-100. Display the even numbers in 
-                        <strong>BOLD</strong>.
+                    <h1 class="display-5 fw-bold lh-1 mb-3 main-content-heading-font">TACOCAT: A Coding Challenge </h1>
+                    <h4 class="lead main-content-sub-font">TacoCat is a palindrome. A palindrome is a word, phrase, or sequence that reads the same 
+                        backword as forward. Write a program that checks if the phrase entered is a <strong>Palindrome</strong>.
                     </h4>
-                    <ul class="fa-ul pt-2 checklist">
+                    <ul class="fa-ul pt-2 checklist main-content-sub-font main-content-sub-color">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundaments</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
@@ -71,11 +74,11 @@
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
                     </ul>
                     <div>
-                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
+                        <a type="button" class="btn btn-gold-solid btn-lg px-4 me-md-2 main-content-sub-font" href="app.html">Try It Out!</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="/img/Hundasher-1.svg" class="img-fluid center-block d-block mx-auto " alt="Hundasher Logo" width="700" height="500">
+                    <img src="/img/Tacocat-Main-Alt-Logo-2.svg" class="img-fluid center-block d-block mx-auto " alt="Hundasher Logo" width="700" height="500">
                 </div>
                 <h5 class="fw-bold mt-5">
                     <div class="d-flex">
@@ -95,12 +98,12 @@
         <div class="container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 gy-2">
                 <div class="col order-last order-lg-first d-flex align-items-center justify-content-center text-light ">
-                    <div class="footer-text"><span class="text-mute">&copy;2022</span> Bralin Larence </div>
+                    <div class="footer-text footer-text-color"><span class="text-mute">&copy;2022</span> Bralin Larence </div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-sm-center justify-content-lg-center mb-2">
-                    <img src="/img/BralinLarence-Logo-1.svg" alt="Bralin Larence Logo" class="img-fluid"></img>
+                    <img src="/img/BralinLarence-Footer-Logo-Alt-1.svg" alt="Bralin Larence Logo" class="img-fluid"></img>
                 </div>
-                <div class="col  px-5 d-flex align-items-center justify-content-center justify-content-lg-end">
+                <div class="col  px-5 d-flex align-items-center justify-content-center justify-content-lg-center">
                     <div class="row">
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
