--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link nav-content-font nav-content-color" href="code.html">Code</a>
                     </li>                    
                     <li class="nav-item ">
-                        <a class="nav-link nav-content-font nav-content-color" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link nav-content-font nav-content-color" target="_blank" href="https://github.com/BralinLarence/TacoCat">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-content-font nav-content-color" target="_blank" href="#">About</a>
@@ -105,8 +105,8 @@
                 </div>
                 <div class="col  px-5 d-flex align-items-center justify-content-center justify-content-lg-center">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/BralinLarence/TacoCat" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://www.linkedin.com/in/bralin-r-2791b9253/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
                         <!--<div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                         <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div> -->
                     </div>
